Fix biography primary key
